--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	compile('net.sourceforge.nekohtml:nekohtml:1.9.22')
 	compile('org.webjars:webjars-locator-core:0.32')
 	compile('org.webjars:bootstrap:3.3.7')
-	compile('org.webjars:jquery:3.2.1')
+	//compile('org.webjars:jquery:3.2.1')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
@@ -39,6 +39,14 @@ dependencies {
 
 	//Localdatetime (makkelijkere integratie met kalender) zie: https://stackoverflow.com/questions/29956175/json-java-8-localdatetime-format-in-spring-boot
 	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.4.0")
+
+	//REST API automatisch documenteren
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+
+
+
+
 
 
 
