--- a/build.gradle
+++ b/build.gradle
@@ -49,11 +49,11 @@ dependencies {
     compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.1.0.RELEASE'
 
     //Chat Dependencies
-    /*compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     compile group: 'com.j2html', name: 'j2html', version: '1.2.2'
     compile group: 'org.json', name: 'json', version: '20090211'
-    compile group: 'io.javalin', name: 'javalin', version: '1.4.1'*/
-    compile group: 'org.springframework', name: 'spring-messaging', version: '5.0.4.RELEASE'
+    compile group: 'io.javalin', name: 'javalin', version: '1.4.1'
+/*    compile group: 'org.springframework', name: 'spring-messaging', version: '5.0.4.RELEASE'*/
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
 }
