--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,12 @@ dependencies {
     compile group: 'com.j2html', name: 'j2html', version: '1.2.2'
     compile group: 'org.json', name: 'json', version: '20090211'
     compile group: 'io.javalin', name: 'javalin', version: '1.4.1'
-/*    compile group: 'org.springframework', name: 'spring-messaging', version: '5.0.4.RELEASE'*/
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
+    compile group: 'javax.json', name: 'javax.json-api', version: '1.1.2'
+    compile group: 'io.socket', name: 'socket.io-client', version: '1.0.0'
+
+    compile group: 'org.springframework', name: 'spring-messaging', version: '5.0.4.RELEASE'
+    compile group: 'org.springframework', name: 'spring-websocket', version: '5.0.4.RELEASE'
 
 }
