--- a/build.gradle
+++ b/build.gradle
@@ -80,4 +80,9 @@ dependencies {
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
+    //mailing
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
+
+
+
 }
