--- a/build.gradle
+++ b/build.gradle
@@ -80,4 +80,6 @@ dependencies {
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
+    compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre8'
+
 }
